--- a/eecs4412_phase2_d1.ipynb
+++ b/eecs4412_phase2_d1.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPeD93zlgujwfoCv8x7EAeG",
+      "mount_file_id": "1wMQIOHFDa7i6htuw-5B20OBETfCCEdPK",
+      "authorship_tag": "ABX9TyMLgo75Gbe9JsYjMBVfVXhY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "GEQ_K8SXp-Fo"
       },
@@ -43,9 +44,32 @@
     {
       "cell_type": "code",
       "source": [
+        "!git clone https://github.com/pranavgupta0001/yorkUCourses.git\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kyd0d9Zc2B-j",
+        "outputId": "faa8c82b-6dff-4e13-de1b-c7f28654aa91"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: destination path 'yorkUCourses' already exists and is not an empty directory.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
         "# Set directory path\n",
-        "dir_path = '/content/stocks'\n",
+        "dir_path = '/content/yorkUCourses/eecs4412/data'\n",
         "\n",
         "# Get list of files in directory\n",
         "files = os.listdir(dir_path)\n",
@@ -68,7 +92,7 @@
       "metadata": {
         "id": "m2qcdLLFrwiC"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -83,9 +107,9 @@
           "height": 423
         },
         "id": "p7FCJq6-qoGY",
-        "outputId": "216a9242-bdea-4f9c-dd55-d233d0be778c"
+        "outputId": "f4472296-d91e-492b-ba04-c3b8a128978d"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -121,7 +145,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5acfbdf5-7abe-44f3-8ec9-f517b21b3cf1\">\n",
+              "  <div id=\"df-de7f1503-3700-4139-a838-94a1152db578\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -277,7 +301,7 @@
               "</table>\n",
               "<p>504 rows × 8 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5acfbdf5-7abe-44f3-8ec9-f517b21b3cf1')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-de7f1503-3700-4139-a838-94a1152db578')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -328,12 +352,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-5acfbdf5-7abe-44f3-8ec9-f517b21b3cf1 button.colab-df-convert');\n",
+              "          document.querySelector('#df-de7f1503-3700-4139-a838-94a1152db578 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-5acfbdf5-7abe-44f3-8ec9-f517b21b3cf1');\n",
+              "          const element = document.querySelector('#df-de7f1503-3700-4139-a838-94a1152db578');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -356,7 +380,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -373,9 +397,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4Iv6vBqVttOI",
-        "outputId": "0896bae4-1972-427c-a1c9-ffc740acaa0b"
+        "outputId": "5debd402-464d-46c5-ecfb-b44241ad6b5e"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -426,9 +450,9 @@
           "height": 472
         },
         "id": "DA9FWzXwqQx2",
-        "outputId": "650f28d9-9058-40d8-ac6c-d575ab667d6b"
+        "outputId": "e69e911c-c3ce-4d60-a7ca-a403a721db9e"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -473,12 +497,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 505
+          "height": 525
         },
         "id": "lfX1vvqbuhFR",
-        "outputId": "7969bb18-14c7-4b43-df07-ed974ee8f480"
+        "outputId": "230d6bf6-4d39-4ec4-8189-142667bbb2c4"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
