--- a/eecs4412/eecs4412_phase2_d1.ipynb
+++ b/eecs4412/eecs4412_phase2_d1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1wMQIOHFDa7i6htuw-5B20OBETfCCEdPK",
-      "authorship_tag": "ABX9TyMLgo75Gbe9JsYjMBVfVXhY",
+      "authorship_tag": "ABX9TyOwHi2GUQ2ehEEFJuB8A4w6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/pranavgupta0001/yorkUCourses/blob/main/eecs4412_phase2_d1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/pranavgupta0001/yorkUCourses/blob/main/eecs4412/eecs4412_phase2_d1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -51,7 +51,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kyd0d9Zc2B-j",
-        "outputId": "faa8c82b-6dff-4e13-de1b-c7f28654aa91"
+        "outputId": "f55afef6-9a15-4b9a-9a17-c1e2bfc60fa5"
       },
       "execution_count": 2,
       "outputs": [
@@ -59,7 +59,12 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "fatal: destination path 'yorkUCourses' already exists and is not an empty directory.\n"
+            "Cloning into 'yorkUCourses'...\n",
+            "remote: Enumerating objects: 35, done.\u001b[K\n",
+            "remote: Counting objects: 100% (35/35), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (28/28), done.\u001b[K\n",
+            "remote: Total 35 (delta 7), reused 4 (delta 1), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (35/35), 360.72 KiB | 1.36 MiB/s, done.\n"
           ]
         }
       ]
@@ -107,7 +112,7 @@
           "height": 423
         },
         "id": "p7FCJq6-qoGY",
-        "outputId": "f4472296-d91e-492b-ba04-c3b8a128978d"
+        "outputId": "2978c41a-191e-44e0-e412-b614ef3cb1c7"
       },
       "execution_count": 4,
       "outputs": [
@@ -145,7 +150,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-de7f1503-3700-4139-a838-94a1152db578\">\n",
+              "  <div id=\"df-b89c43be-2a5d-42a2-ab53-dc14dfbe4296\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -301,7 +306,7 @@
               "</table>\n",
               "<p>504 rows × 8 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-de7f1503-3700-4139-a838-94a1152db578')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b89c43be-2a5d-42a2-ab53-dc14dfbe4296')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -352,12 +357,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-de7f1503-3700-4139-a838-94a1152db578 button.colab-df-convert');\n",
+              "          document.querySelector('#df-b89c43be-2a5d-42a2-ab53-dc14dfbe4296 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-de7f1503-3700-4139-a838-94a1152db578');\n",
+              "          const element = document.querySelector('#df-b89c43be-2a5d-42a2-ab53-dc14dfbe4296');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -397,7 +402,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4Iv6vBqVttOI",
-        "outputId": "5debd402-464d-46c5-ecfb-b44241ad6b5e"
+        "outputId": "cd96cb8d-de1e-4efc-b5a0-12dc2fb26f70"
       },
       "execution_count": 5,
       "outputs": [
@@ -450,7 +455,7 @@
           "height": 472
         },
         "id": "DA9FWzXwqQx2",
-        "outputId": "e69e911c-c3ce-4d60-a7ca-a403a721db9e"
+        "outputId": "2ef133f3-9802-48b8-c712-d33f55562f5a"
       },
       "execution_count": 6,
       "outputs": [
@@ -497,10 +502,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 525
+          "height": 505
         },
         "id": "lfX1vvqbuhFR",
-        "outputId": "230d6bf6-4d39-4ec4-8189-142667bbb2c4"
+        "outputId": "eb041b37-1322-4225-f76a-f643ae9cdfd7"
       },
       "execution_count": 7,
       "outputs": [
@@ -522,6 +527,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "W1UAgqUFA0ZC"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
